tests/parser/fail/malformed-kw-binary.som
"test:
failMessage:
  contains: keyword selector
"

MalformedKwBinary = (
  run = (
    #c:++.
  )
)
